# context-portability-tool

./: .gitignore  README.md  config.yaml.example  pyproject.toml
.github/workflows/: publish.yml
ctxkit/cli/: commands.py
ctxkit/config/: loader.py  models.py
ctxkit/core/: deps.py  vault_map.py
ctxkit/core/indexer/: document_loader.py  embedding_engine.py  index_writer.py  manifest_manager.py  text_splitter.py  vault_scanner.py
ctxkit/core/ingester/: classification_engine.py  conflict_detector.py  folder_router.py  proposal_generator.py  summary_embedder.py  summary_receiver.py
ctxkit/core/retriever/: chunk_grouper.py  chunk_stitcher.py  context_assembler.py  context_formatter.py  keyword_prefilter.py  source_ranker.py  vector_searcher.py
ctxkit/core/writer/: backup_manager.py  file_writer.py  frontmatter_injector.py  index_trigger.py
ctxkit/docs/: config-reference.md  getting-started.md  retrieval-and-eval-guide.md
ctxkit/llm/: llm_layer.py
ctxkit/store/: vector_store.py
ctxkit/utils/: file_utils.py  logging.py
docs/: architecture.md
install/: ctxkit.rb  install.sh
mdcore/cli/: commands.py
mdcore/config/: loader.py  models.py
mdcore/core/: deps.py  vault_map.py
mdcore/core/indexer/: document_loader.py  embedding_engine.py  index_writer.py  manifest_manager.py  text_splitter.py  vault_scanner.py
mdcore/core/ingester/: classification_engine.py  conflict_detector.py  folder_router.py  proposal_generator.py  summary_embedder.py  summary_receiver.py
mdcore/core/retriever/: chunk_grouper.py  chunk_stitcher.py  context_assembler.py  context_formatter.py  keyword_prefilter.py  source_ranker.py  vector_searcher.py
mdcore/core/writer/: backup_manager.py  file_writer.py  frontmatter_injector.py  index_trigger.py
mdcore/docs/: config-reference.md
mdcore/gui/: app.py
mdcore/llm/: llm_layer.py
mdcore/store/: vector_store.py
mdcore/utils/: file_utils.py  logging.py
tests/: test_config_models.py  test_llm_layer.py  test_llm_layer_aggregator.py
